--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -50,10 +50,12 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="12dp"
-            android:hint="password" />
+            android:hint="password"
+            android:inputType="textPassword"
+            />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnSubmitSignup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/etNewPassword"
