--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,9 +25,14 @@
             android:layout_below="@+id/etPassword"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="10dp"
-            android:text="@string/login_button" />
+            android:background="@drawable/rounded_button"
+            android:text="@string/login_button"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/etPassword"
@@ -36,10 +41,12 @@
             android:layout_below="@+id/etUsername"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="10dp"
+            android:background="@drawable/rounded_button_et"
             android:hint="password"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:padding="15dp" />
 
         <EditText
             android:id="@+id/etUsername"
@@ -49,8 +56,10 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
+            android:background="@drawable/rounded_button_et"
             android:hint="username"
-            android:inputType="text" />
+            android:inputType="text"
+            android:padding="15dp" />
 
         <ImageView
             android:id="@+id/ivLogo"
@@ -101,7 +110,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_toEndOf="@+id/tvSignQuestion"
                 android:text="@string/signup_text"
-                android:textColor="@android:color/black"
+                android:textColor="@color/instagram_signup_color"
                 android:textStyle="bold" />
         </RelativeLayout>
 
