--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:background="@drawable/bottom_border"
+    android:paddingBottom="20dp">
 
     <ImageView
         android:id="@+id/ivImage"
@@ -12,32 +15,102 @@
         android:layout_height="300dp"
         android:layout_below="@+id/tvUsername"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/tvUsername"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="false"
+    <ImageView
+        android:id="@+id/iv3Button"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="5dp"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:text="miso" />
+        android:layout_marginEnd="20dp"
+        app:srcCompat="@drawable/media_option_button"
+        app:tint="@color/instagram_icon_tint" />
+
+    <ImageView
+        android:id="@+id/ivHeart"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_below="@+id/ivImage"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        app:srcCompat="@drawable/ufi_heart_icon"
+        app:tint="@color/instagram_icon_tint" />
+
+    <ImageView
+        android:id="@+id/ivComment"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_below="@+id/ivImage"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_toEndOf="@+id/ivHeart"
+        app:srcCompat="@drawable/ufi_comment"
+        app:tint="@color/instagram_icon_tint" />
+
+    <ImageView
+        android:id="@+id/ivSave"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_below="@+id/ivImage"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="15dp"
+        app:srcCompat="@drawable/ufi_save"
+        app:tint="@color/instagram_icon_tint" />
+
+    <ImageView
+        android:id="@+id/ivFly"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/ivImage"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="7dp"
+        android:layout_toEndOf="@+id/ivComment"
+        app:srcCompat="@drawable/ufi_new_direct"
+        app:tint="@color/instagram_icon_tint" />
 
     <TextView
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ivImage"
-        android:layout_alignParentStart="true"
+        android:layout_below="@+id/ivComment"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_toEndOf="@+id/tvUsername2"
+        android:textColor="@color/instagram_icon_tint"
         tools:text="trying to look hipster" />
+
+    <TextView
+        android:id="@+id/tvUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="15dp"
+        android:layout_toStartOf="@+id/iv3Button"
+        android:gravity="center_vertical"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/instagram_icon_tint"
+        android:textStyle="bold"
+        tools:text="The quickbrownfox34242" />
+
+    <TextView
+        android:id="@+id/tvUsername2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ivHeart"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="false"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="5dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/instagram_icon_tint"
+        android:textStyle="bold"
+        tools:text="miso" />
 </RelativeLayout>
