--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -17,4 +17,9 @@
         android:icon="@drawable/ic_baseline_person_24"
         android:title="Profile"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_signout"
+        android:icon="@drawable/ic_baseline_exit_to_app_24"
+        android:title="Sign Out"
+        app:showAsAction="always" />
 </menu>
